--- a/index.css
+++ b/index.css
@@ -29,7 +29,7 @@ body{
     margin-right: auto;
     width: 40% auto;
   }
-  
+
   input[type="text"] {
     width: 90%;
     padding: 10px;
@@ -59,8 +59,7 @@ body{
   }
   
   #helpButton {
-    position: fixed;
-    bottom: 10px;
+    position: absolute;
     right: 10px;
     height: 36px;
     width: 36px;
@@ -75,6 +74,14 @@ body{
     font-size: 20px;
   }
 
+  #map {
+    position: absolute;
+    border: 0;
+    bottom: 10px;
+    width: 100%;
+    height: 30%;
+  }
+  
   .modal {
     display: none;
     position: fixed;
