--- a/index.css
+++ b/index.css
@@ -1,113 +1,125 @@
 body{
+  position: absolute;
   background-color: #ebebeb;
   font-family: sans-serif;
+  width: 100%;
+  height: 90%;
 }
 
+.header {
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+  font-size: 24px;
+  font-weight: bold;
+} 
+
 #wrap {
-    max-width: 600px;
-    margin: 15px auto;
-    padding: 20px;
-    background-color: #ffffff;
-    border-radius: 10px;
-    box-shadow: 0 0 20px rgba(0,0,0,0.1);
-  }
-  
-  #punkt {
-    color: #243547;
-    margin: auto;
-  }
-  
-  #question {
-    font-size: 18px;
-    margin-bottom: 20px;
-    margin-top: 20px;
-  }
+  max-width: 600px;
+  margin: 15px auto;
+  padding: 20px;
+  background-color: #ffffff;
+  border-radius: 10px;
+  box-shadow: 0 0 20px rgba(0,0,0,0.1);
+}
 
-  #foska {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 40% auto;
-  }
+#punkt {
+  color: #243547;
+  margin: auto;
+}
 
-  input[type="text"] {
-    width: 90%;
-    padding: 10px;
-    font-size: 16px;
-    margin-bottom   : 20px;
-    border: 1px solid #ccc;
-    border-radius: 6px;
-  }
-  
-  button {
-    padding: 10px 20px;
-    font-size: 16px;
-    background-color: #24d36d;
-    color: rgb(250, 255, 237);
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: #1b7540a8;
-  }
-  
-  #feedback {
-    margin-top: 20px;
-    font-size: 18px;
-  }
-  
-  #helpButton {
-    position: absolute;
-    bottom: 2%;
-    right: 10px;
-    height: 36px;
-    width: 36px;
-    background-color: #208bfd;
-    color: rgb(220, 247, 222);
-    border: none;
-    padding: 0px;
-    border-radius: 8px;
-    cursor: pointer;
-    box-shadow: 0 0 20px rgba(0,0,0,0.1);
-    letter-spacing: -1px;
-    font-size: 20px;
-  }
+#question {
+  font-size: 18px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
 
-  #map {
-    display: none;
-    position: absolute;
-    border: 0;
-    bottom: 10px;
-    width: 100%;
-    height: 30%;
-  }
-  
-  .modal {
-    display: none;
-    position: fixed;
-    z-index: 999;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0,0,0,0.5);
-  }
+#foska {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40% auto;
+}
 
-  .modal-content {
-    background-color: #fff;
-    margin: 10% auto;
-    padding: 20px;
-    border-radius: 10px;
-    max-width: 800px;
-    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.534);
-  }
+input[type="text"] {
+  width: 90%;
+  padding: 10px;
+  font-size: 16px;
+  margin-bottom   : 20px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+}
 
-  .close {
-    float: right;
-    font-size: 30px;
-    cursor: pointer;
-    color: rgb(148, 2, 2);
-  }
+button {
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #24d36d;
+  color: rgb(250, 255, 237);
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #1b7540a8;
+}
+
+#feedback {
+  margin-top: 20px;
+  font-size: 18px;
+}
+
+#helpButton {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  height: 36px;
+  width: 36px;
+  background-color: #208bfd;
+  color: rgb(220, 247, 222);
+  border: none;
+  padding: 0px;
+  border-radius: 8px;
+  cursor: pointer;
+  box-shadow: 0 0 20px rgba(0,0,0,0.1);
+  font-size: 20px;
+}
+
+#map {
+  display: none;
+  justify-self: center;
+  width: 100%;
+  margin: 20px auto;
+  background-color: #e6e4e4;
+  border-radius: 10px;
+  box-shadow: 0 0 20px rgba(100, 99, 99, 0.1);
+}
+
+#map img {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding: 0;
+}
+
+.modal-content {
+  background-color: #fff;
+  margin: 10% auto;
+  padding: 20px;
+  border-radius: 10px;
+  max-width: 800px;
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.534);
+}
+
+.close {
+  float: right;
+  font-size: 30px;
+  cursor: pointer;
+  color: rgb(148, 2, 2);
+}
