--- a/index.css
+++ b/index.css
@@ -1,5 +1,4 @@
 body{
-  position: absolute;
   background-color: #ebebeb;
   font-family: sans-serif;
   height: 100vh
@@ -74,6 +73,12 @@ button:hover {
   cursor: pointer;
   box-shadow: 0 0 20px rgba(0,0,0,0.1);
   font-size: 20px;
+}
+
+#buttonHolder{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
   #map {
