--- a/index.css
+++ b/index.css
@@ -82,13 +82,14 @@ button:hover {
 }
 
   #map {
-    max-width: 600px;
-    margin: 10px;
     display: none;
     position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     border: 0;
-    width: 90%;
-    height: 35%;
+    /*max-width: 600px;*/
   }
 
   #divmap {
@@ -100,6 +101,14 @@ button:hover {
     background-color: #ffffff;
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0,0,0,0.1);
+  }
+
+  #divmapinner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    border-radius: 12px;
+    overflow: hidden;
   }
   
   .modal {
