--- a/index.css
+++ b/index.css
@@ -83,12 +83,12 @@ button:hover {
 
   #map {
     max-width: 600px;
-    margin: 10px;
+    padding: 10px;
     display: none;
-    position: absolute;
+    justify-self: center;
     border: 0;
     width: 90%;
-    height: 35%;
+    height: 90%;
   }
 
   #divmap {
